--- a/tmps-server/tmps-server.csproj
+++ b/tmps-server/tmps-server.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>tmps_server</RootNamespace>
+    <RootNamespace>tmpsserver</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -18,6 +18,9 @@
     </Reference>
     <Reference Include="lswtss-omp-game-api-core">
       <HintPath>D:\lswtss-omp-export-latest\workspaces\dotnet\game-api-core\bin\Release\net8.0\lswtss-omp-game-api-core.dll</HintPath>
+    </Reference>
+    <Reference Include="RiptideNetworking">
+      <HintPath>D:\lswtss-omp-export\workspaces\dotnet\riptide-networking\RiptideNetworking\bin\Release\netstandard2.0\RiptideNetworking.dll</HintPath>
     </Reference>
     <Reference Include="system-runtime-interop-services-ext">
       <HintPath>D:\lswtss-omp-export-latest\workspaces\dotnet\system-runtime-interop-services-ext\bin\Release\net8.0\system-runtime-interop-services-ext.dll</HintPath>
