--- a/tmps-client/tmps-client.csproj
+++ b/tmps-client/tmps-client.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <BaseOutputPath>H:\SteamLibrary\steamapps\common\LEGO Star Wars - The Skywalker Saga\mods\The Multiplayer Saga</BaseOutputPath>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,11 +18,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="omp-lswtss-api1-core">
-      <HintPath>D:\lswtss-omp-jubjub-export\workspaces\dotnet\api1-core\bin\Release\net8.0\omp-lswtss-api1-core.dll</HintPath>
+    <Reference Include="omp-lswtss-c-api1-core">
+      <HintPath>H:\SteamLibrary\steamapps\common\LEGO Star Wars - The Skywalker Saga\mods\c-api1\omp-lswtss-c-api1-core.dll</HintPath>
     </Reference>
-    <Reference Include="omp-lswtss-api1-main">
-      <HintPath>D:\lswtss-omp-jubjub-export\workspaces\dotnet\api1-main\bin\Release\net8.0\omp-lswtss-api1-main.dll</HintPath>
+    <Reference Include="omp-lswtss-c-api1-main">
+      <HintPath>H:\SteamLibrary\steamapps\common\LEGO Star Wars - The Skywalker Saga\mods\c-api1\omp-lswtss-c-api1-main.dll</HintPath>
+    </Reference>
+    <Reference Include="omp-lswtss-c-api1-manager">
+      <HintPath>H:\SteamLibrary\steamapps\common\LEGO Star Wars - The Skywalker Saga\mods\c-api1\omp-lswtss-c-api1-manager.dll</HintPath>
+    </Reference>
+    <Reference Include="omp-lswtss-c-func-hook1">
+      <HintPath>H:\SteamLibrary\steamapps\common\LEGO Star Wars - The Skywalker Saga\mods\c-func-hook1\omp-lswtss-c-func-hook1.dll</HintPath>
     </Reference>
     <Reference Include="RiptideNetworking">
       <HintPath>D:\lswtss-omp-export\workspaces\dotnet\riptide-networking\RiptideNetworking\bin\Release\netstandard2.0\RiptideNetworking.dll</HintPath>
