--- a/tmps-client/tmps-client.csproj
+++ b/tmps-client/tmps-client.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\game-util\game-util.csproj" />
     <ProjectReference Include="..\networking\networking.csproj" />
   </ItemGroup>
 
