--- a/game-util/game-util.csproj
+++ b/game-util/game-util.csproj
@@ -9,13 +9,13 @@
 
   <ItemGroup>
     <Reference Include="omp-lswtss-c-api1-core">
-      <HintPath>H:\SteamLibrary\steamapps\common\LEGO Star Wars - The Skywalker Saga\mods\c-api1\omp-lswtss-c-api1-core.dll</HintPath>
+      <HintPath>..\tmps-server\omp-lswtss-c-api1-core.dll</HintPath>
     </Reference>
     <Reference Include="omp-lswtss-c-api1-main">
-      <HintPath>H:\SteamLibrary\steamapps\common\LEGO Star Wars - The Skywalker Saga\mods\c-api1\omp-lswtss-c-api1-main.dll</HintPath>
+      <HintPath>..\tmps-server\omp-lswtss-c-api1-main.dll</HintPath>
     </Reference>
     <Reference Include="omp-lswtss-c-api1-manager">
-      <HintPath>H:\SteamLibrary\steamapps\common\LEGO Star Wars - The Skywalker Saga\mods\c-api1\omp-lswtss-c-api1-manager.dll</HintPath>
+      <HintPath>..\tmps-server\omp-lswtss-c-api1-manager.dll</HintPath>
     </Reference>
   </ItemGroup>
 
