--- a/networking/networking.csproj
+++ b/networking/networking.csproj
@@ -14,16 +14,13 @@
 
   <ItemGroup>
     <Reference Include="omp-lswtss-c-api1-core">
-      <HintPath>H:\SteamLibrary\steamapps\common\LEGO Star Wars - The Skywalker Saga\mods\c-api1\omp-lswtss-c-api1-core.dll</HintPath>
+      <HintPath>..\tmps-server\omp-lswtss-c-api1-core.dll</HintPath>
     </Reference>
     <Reference Include="omp-lswtss-c-api1-main">
-      <HintPath>H:\SteamLibrary\steamapps\common\LEGO Star Wars - The Skywalker Saga\mods\c-api1\omp-lswtss-c-api1-main.dll</HintPath>
+      <HintPath>..\tmps-server\omp-lswtss-c-api1-main.dll</HintPath>
     </Reference>
     <Reference Include="omp-lswtss-c-api1-manager">
-      <HintPath>H:\SteamLibrary\steamapps\common\LEGO Star Wars - The Skywalker Saga\mods\c-api1\omp-lswtss-c-api1-manager.dll</HintPath>
-    </Reference>
-    <Reference Include="system-runtime-interop-services-ext">
-      <HintPath>D:\lswtss-omp-export-latest\workspaces\dotnet\system-runtime-interop-services-ext\bin\Release\net8.0\system-runtime-interop-services-ext.dll</HintPath>
+      <HintPath>..\tmps-server\omp-lswtss-c-api1-manager.dll</HintPath>
     </Reference>
   </ItemGroup>
 
