--- a/dummy-client/dummy-client.csproj
+++ b/dummy-client/dummy-client.csproj
@@ -14,7 +14,7 @@
 
   <ItemGroup>
     <Reference Include="RiptideNetworking">
-      <HintPath>D:\lswtss-omp-export\workspaces\dotnet\riptide-networking\RiptideNetworking\bin\Release\netstandard2.0\RiptideNetworking.dll</HintPath>
+      <HintPath>RiptideNetworking.dll</HintPath>
     </Reference>
   </ItemGroup>
 
